--- a/_config.yml
+++ b/_config.yml
@@ -20,17 +20,19 @@
 
 title: Don's GitHub Site
 email: donfernandes25@gmail.com
-description: >- # this means to ignore newlines until "baseurl:"
- Don Fernandes GitHub Pages Site
+# description: >- # this means to ignore newlines until "baseurl:"
+# Don Fernandes GitHub Pages Site
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+# twitter_username: jekyllrb
+# github_username:  jekyll
 
 # Build settings
-theme: minima
+remote_theme: pages-themes/modernist@v0.2.0
+# theme: minima
 plugins:
-  - jekyll-feed
+#  - jekyll-feed
+- jekyll-remote-theme
 
 # Exclude from processing.
 # The following items will not be processed, by default.
