--- a/_config.yml
+++ b/_config.yml
@@ -28,11 +28,11 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 # github_username:  jekyll
 
 # Build settings
-remote_theme: pages-themes/modernist@v0.2.0
-# theme: minima
+
+theme: minima
 plugins:
 #  - jekyll-feed
-- jekyll-remote-theme
+
 
 # Exclude from processing.
 # The following items will not be processed, by default.
