--- a/_config.yml
+++ b/_config.yml
@@ -28,9 +28,12 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 # github_username:  jekyll
 
 # Build settings
-
-theme: minima
+remote_theme: pages-themes/modernist@v0.2.0
 plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
+
+# theme: minima
+# plugins:
 #  - jekyll-feed
 
 
