--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ email: donfernandes25@gmail.com
 # Build settings
 remote_theme: pages-themes/modernist@v0.2.0
 
-# theme: minima
+theme: minima
 plugins:
 #  - jekyll-feed
 - jekyll-remote-theme # add this line to the plugins list if you already have one
