--- a/_config.yml
+++ b/_config.yml
@@ -22,17 +22,16 @@ title: Don Fernandes
 email: donfernandes25@gmail.com
 # description: >- # this means to ignore newlines until "baseurl:"
 # Don Fernandes GitHub Pages Site
- baseurl: "" # the subpath of your site, e.g. /blog
- url: "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
 # github_username:  jekyll
 
 # Build settings
 
 theme: minima
-
 plugins:
-#  - jekyll-feed
+  - jekyll-feed
 
 
 
