--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ email: donfernandes25@gmail.com
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
-# github_username:  jekyll
+github_username:  dfernandes25
 
 # Build settings
 
