--- a/_config.yml
+++ b/_config.yml
@@ -18,18 +18,18 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Don Fernandes
+title: Donald Fernandes
 email: donfernandes25@gmail.com
 # description: >- # this means to ignore newlines until "baseurl:"
 # Don Fernandes GitHub Pages Site
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
-github_username:  dfernandes25
+# github_username:  dfernandes25
 
 # Build settings
 
-theme: modernist
+theme: minima
 plugins:
   - jekyll-feed
 
