--- a/_config.yml
+++ b/_config.yml
@@ -20,8 +20,8 @@
 
 title: Donald Fernandes
 email: donfernandes25@gmail.com
-# description: >- # this means to ignore newlines until "baseurl:"
-# Don Fernandes GitHub Pages Site
+description: >- # this means to ignore newlines until "baseurl:"
+My GitHub Page
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
