--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Don's GitHub Pages
-email: your-email@example.com
+email: donfernandes25@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Blogging, Resume, IT related stuff, etc.
 baseurl: "" # the subpath of your site, e.g. /blog
