--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,7 @@
 
 title: Don's GitHub Pages
 email: donfernandes25@gmail.com
+author: Don Fernandes
 description: >- # this means to ignore newlines until "baseurl:"
   Blogging, Resume, IT related stuff, etc.
 baseurl: "" # the subpath of your site, e.g. /blog
