--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title: Don Fernandes GitHub Pages
 email: donfernandes25@gmail.com
 author: Don Fernandes
 description: >- # this means to ignore newlines until "baseurl:"
-  Resume, IT related stuff, etc.
+  Resume, Code Samples, etc. 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: cbctech25
