--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: cbctech25
-github_username:  dfernandes25
+#github_username:  dfernandes25
 linkedin_username: donfernandes
 
 # Build settings
