--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   Blog, Contact Info, Sample Code, Resume, etc. 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-#twitter_username: cbctech25
+twitter_username: cbctech25
 #github_username:  dfernandes25
 linkedin_username: donfernandes
 
