--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,7 @@ linkedin_username: donfernandes
 
 # Build settings
 theme: jekyll-theme-cayman
+remote_theme: lewismiddleton/cayman-dark
 plugins:
   - jekyll-feed
 
