--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 linkedin_username: donfernandes
 
 # Build settings
-theme: jekyll-theme-cayman
+# theme: jekyll-theme-cayman
 remote_theme: lewismiddleton/cayman-dark
 plugins:
   - jekyll-feed
